@@ -76,6 +76,8 @@
 // call got rejected
 -(void) applicationDidBecomeActive:(UIApplication *)application
 {
+	[[CCDirector sharedDirector] setNextDeltaTimeZero:YES];
+	
 	if( [navController_ visibleViewController] == director_ )
 		[director_ resume];
 }
